# Docker-blog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notes/: admin.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templates/notes/: list.html
server/: settings.py  urls.py
